# xhh-workshop

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
.sakura/: SAKURA.md
.sakura/memory/: 2026-06-14_PR1_3e9ee3b.md  2026-06-15_PR2_dd180a7.md  2026-06-15_PR2_incr2_25031b1.md
crates/xhh-agent/: Cargo.toml
crates/xhh-agent/src/: config.rs  error.rs  lib.rs  prompt.rs  runner.rs  text.rs  tool.rs
crates/xhh-agent/src/provider/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/xhh-app/: Cargo.toml  tauri.conf.json
crates/xhh-app/capabilities/: default.json
crates/xhh-app/frontend/: index.html  package-lock.json  package.json  tsconfig.json
crates/xhh-app/frontend/src/: App.svelte  app.css  main.ts
crates/xhh-app/frontend/src/components/: AgentSidebar.svelte  PostCard.svelte  Sidebar.svelte  TemplateEditor.svelte  TitleBar.svelte  ToastHost.svelte
crates/xhh-app/frontend/src/lib/: api.ts  content.ts  content_test_node.ts  notification.svelte.ts  render.svelte.ts  stores.svelte.ts  toast.svelte.ts
crates/xhh-app/frontend/src/views/: Agent.svelte  Editor.svelte  Favourites.svelte  Home.svelte  Login.svelte  Notifications.svelte  PostDetail.svelte  Profile.svelte  Search.svelte  Settings.svelte  UserView.svelte
crates/xhh-app/icons/: icon.icns
crates/xhh-app/src/: commands.rs  lib.rs  main.rs  prefs.rs  state.rs
crates/xhh-cli/: Cargo.toml
crates/xhh-cli/src/: main.rs
crates/xhh-core/: Cargo.toml
crates/xhh-core/src/: auth.rs  client.rs  config.rs  crypto.rs  error.rs  hkey.rs  lib.rs
crates/xhh-core/src/api/: comment.rs  emoji.rs  feed.rs  interaction.rs  mod.rs  notification.rs  post.rs  search.rs  upload.rs  user.rs
crates/xhh-core/src/cache/: image.rs  mod.rs  post.rs
crates/xhh-core/src/models/: mod.rs
crates/xhh-http/: Cargo.toml
crates/xhh-http/src/: app.rs  auth_mw.rs  error.rs  lib.rs  main.rs  state.rs
crates/xhh-http/src/routes/: agent.rs  auth.rs  comment.rs  feed.rs  interaction.rs  misc.rs  mod.rs  post.rs  search.rs  user.rs
docs/superpowers/specs/: 2026-06-16-post-cache-design.md
