[workspace]
resolver = "2"
members = [
    "crates/xhh-core",
    "crates/xhh-cli",
    "crates/xhh-agent",
    "crates/xhh-app",
    "crates/xhh-http",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Sakura520222"]
license = "GPL-3.0-only"
repository = "https://github.com/Sakura520222/xhh-workshop"
homepage = "https://github.com/Sakura520222/xhh-workshop"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async trait
async-trait = "0.1"

# HTTP server (M3)
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Tauri (M4)
tauri = { version = "2" }
tauri-build = { version = "2" }
tauri-plugin-shell = "2"
window-vibrancy = "0.5"
# Crypto / encoding
md-5 = "0.10"
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"

# URL encoding
form_urlencoded = "1"
url = "2"

# Time / random / id
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

# Config paths
directories = "5"

# QR code
qrcode = "0.14"
image = "0.25"

# Internal
xhh-core = { path = "crates/xhh-core" }
xhh-agent = { path = "crates/xhh-agent" }

# Profile (workspace-level profile settings)
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
